--- a/Members/Ziad/Task_1/index.html
+++ b/Members/Ziad/Task_1/index.html
@@ -25,28 +25,30 @@
         <hr>
         <table>
             <thead>
-                    <th><p>Item</p></th>
-                    <th><p>Purpose</p></th>
+                    <th>Item</th>
+                    <th>Purpose</th>
             </thead>
-            <tr>
-                <td><p>Good Text Editor</p></td>
-                <td><p>To write code efficiently.</p></td>
-            </tr>
-            <tr>
-                <td><p>Version Control (Git)</p></td>
-                <td><p>To Track changes and collaborate.</p></td>
-            </tr>
-            <tr>
-                <td><p>Curiosity</p></td>
-                <td><p>To Keep learning new things</p></td>
-            </tr>
+            <tbody>
+                <tr>
+                     <td>Good Text Editor</td>
+                     <td>To write code efficiently.</td>
+                </tr>
+                <tr>
+                    <td>Version Control (Git)</td>
+                    <td>To Track changes and collaborate.</td>
+                </tr>
+                <tr>
+                    <td>Curiosity</td>
+                    <td>To Keep learning new things</td>
+                </tr>
+            </tbody>
         </table>
     </div>
     <div>
             <h2>Favourite Concepts</h2>
             <ul>
                 <li>
-                    <p>Web Development Stack</p>
+                    Web Development Stack
                     <ol reversed>
                         <li>JavaScript (Logic)</li>
                         <li>CSS (Styling)</li>
@@ -56,7 +58,7 @@
             </ul>
             <ul>
                 <li>
-                    <p>Core Data Structure</p>
+                    Core Data Structure
                     <ol reversed>
                         <li>Trees</li>
                         <li>Linked Lists</li>
@@ -66,10 +68,7 @@
             </ul>
     </div>
     <footer>
-        <div>
             <p>Jana Doe<br>&copy; 2025</p>
-        </div>
     </footer>
-
 </body>
 </html>
