--- a/Members/Weam/Task1/TASK 1/index.html
+++ b/Members/Weam/Task1/TASK 1/index.html
@@ -20,7 +20,7 @@
         <h2> In Action</h2>
         <img src="https://placehold.co/600x200/3498db/white?text=Code+on+a+Screen" alt="Code on a screen">
         <br><br>
-        <a href="task1.html" target="_blank">learn more about programming language</a>
+        <a href="#" target="_blank">learn more about programming language</a>
         </section>
         <section>
              <h2>Gear &amp; Tips</h2><hr>
